--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "personalportfolio",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
-  "homepage": "https://Angadslr.github.io/PersonalPortfolio",
+  "homepage": "https://angadslr.github.io/PersonalPortfolio",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "deploy": "npm run build && gh-pages -d dist"
+    "preview": "vite preview",   
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
+    "start": "react-scripts start",
+    "build": "react-scripts build"
   },
   "dependencies": {
     "react": "^19.2.0",
